<resources>
    <string name="app_name">Bullseye</string>
    <string name="instruction_text">Put the bullseye as close as you can to</string>
    <string name="target_value_text">85</string>
    <string name="max_value_text">100</string>
    <string name="min_value_text">1</string>
    <string name="btn_hit_me">Hit Me</string>
    <string name="result_dialog_title">Hello there!</string>
    <string name="result_dialog_message">The slider\'s value is %1$d.\nYou scored %2$d points this round.</string>
    <string name="result_dialog_btn_text">Awesome!</string>
</resources>